# data-vortex

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  dagster.yaml  pyproject.toml  workspace.yaml
alembic/: env.py
alembic/versions/: ac0dc96038ee_initial_migration.py  fda0fb95c432_initial_migration.py
data-vortex/utils/: exceptions.py  logging.py
data_vortex/: cli.py  main.py  models.py  rightmove_models.py  rightmove_processing.py  rightmove_query.py
data_vortex/database/: crud.py  database.py  models.py
data_vortex/utils/: config.py  logging.py
notebooks/: db_test.ipynb  rightmove.ipynb
src/dagster/: __init__.py
src/data_vortex/: cli.py  main.py  rightmove_models.py  rightmove_processing.py  rightmove_query.py
src/data_vortex/database/: crud.py  database.py  models.py
src/data_vortex/utils/: config.py  conversion.py  performance_test.py
src/data_vortex_dagster/: __init__.py  io_managers.py  resources.py
src/data_vortex_dagster/assets/: rightmove.py
tests/: conftest.py  test_crud.py  test_models.py  test_orm2pydantic.py  test_rightmove.py  test_rightmove_processing.py
tests/data_vortex/: conftest.py
tests/data_vortex/resources/: rightmove_listing_145459589.xml  search_response.pkl
tests/data_vortex/unit/: test_crud.py  test_rightmove_processing.py
tests/data_vortex_dagster/: conftest.py
tests/data_vortex_dagster/resources/rightmove_backfill_no_partition/: 142675904.xml  147646928.xml
tests/data_vortex_dagster/resources/rightmove_backfill_partitions/partition_two/: 147646928.xml
tests/data_vortex_dagster/resources/source_rigthmove_backfill/partition_one/: 130561805.xml  142675904.xml
tests/data_vortex_dagster/resources/source_rigthmove_backfill/partition_two/: 145368815.html  145368815.xml
tests/data_vortex_dagster/unit/: test_resources.py
tests/data_vortex_dagster/unit/assets/: test_rightmove_asset.py
tests/resources/: cleaned_sample.xml  rightmove_full_rental_query.xml  rightmove_listing_145459589.xml  rightmove_sampe.xml
